tests/rosetta/out/C/bifid-cipher.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:39Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:39Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
typedef struct {
  int e;
  map_string d;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int square_to_maps(int square) {
  map_string_int tmp1 = map_string_int_create(0);
  int emap = tmp1;
  map_string_int tmp2 = map_string_int_create(0);
  map_string dmap = tmp2;
  __auto_type x = 0;
  while (x < square.len) {
    __auto_type row = square.data[x];
    __auto_type y = 0;
    while (y < row.len) {
      __auto_type ch = row.data[y];
      list_int tmp3 = list_int_create(2);
      tmp3.data[0] = x;
      tmp3.data[1] = y;
      list_int tmp4 = list_int_create(2);
      tmp4.data[0] = x;
      tmp4.data[1] = y;
      emap.data[ch] = tmp4;
      char *tmp5 = _str(x);
      char *tmp6 = concat_string(tmp5, ",");
      char *tmp7 = _str(y);
      char *tmp8 = concat_string(tmp6, tmp7);
      char *tmp9 = _str(x);
      char *tmp10 = concat_string(tmp9, ",");
      char *tmp11 = _str(y);
      char *tmp12 = concat_string(tmp10, tmp11);
      dmap.data[tmp12] = ch;
      y = y + 1;
    }
    x = x + 1;
  }
  return (tmp_item_t){.e = emap, .d = dmap};
}

char *remove_space(char *text, int emap) {
  __auto_type s = upper(text);
  __auto_type out = "";
  __auto_type i = 0;
  while (i < strlen(s)) {
    char *tmp13 = slice_string(s, i, i + 1);
    __auto_type ch = tmp13;
    if ((strcmp(ch, " ") != 0) && ch in emap) {
      char *tmp14 = concat_string(out, ch);
      out = tmp14;
    }
    i = i + 1;
  }
  return out;
}

char *encrypt(char *text, int emap, int dmap) {
  text = remove_space(text, emap);
  list_int row0 = list_int_create(0);
  list_int row1 = list_int_create(0);
  __auto_type i = 0;
  while (i < strlen(text)) {
    char *tmp15 = slice_string(text, i, i + 1);
    __auto_type ch = tmp15;
    __auto_type xy = emap.data[ch];
    int tmp16_data[1];
    list_int tmp16 = {1, tmp16_data};
    tmp16.data[0] = xy.data[0];
    list_int tmp17 = concat_list_int(row0, tmp16);
    row0 = tmp17;
    int tmp18_data[1];
    list_int tmp18 = {1, tmp18_data};
    tmp18.data[0] = xy.data[1];
    list_int tmp19 = concat_list_int(row1, tmp18);
    row1 = tmp19;
    i = i + 1;
  }
  for (int tmp20 = 0; tmp20 < row1.len; tmp20++) {
    int v = row1.data[tmp20];
    int tmp21_data[1];
    list_int tmp21 = {1, tmp21_data};
    tmp21.data[0] = v;
    list_int tmp22 = concat_list_int(row0, tmp21);
    row0 = tmp22;
  }
  __auto_type res = "";
  __auto_type j = 0;
  while (j < row0.len) {
    char *tmp23 = _str(row0.data[j]);
    char *tmp24 = concat_string(tmp23, ",");
    char *tmp25 = _str(row0.data[j + 1]);
    char *tmp26 = concat_string(tmp24, tmp25);
    __auto_type key = tmp26;
    char *tmp27 = concat_string(res, dmap.data[key]);
    res = tmp27;
    j = j + 2;
  }
  return res;
}

char *decrypt(char *text, int emap, int dmap) {
  text = remove_space(text, emap);
  list_int coords = list_int_create(0);
  __auto_type i = 0;
  while (i < strlen(text)) {
    char *tmp28 = slice_string(text, i, i + 1);
    __auto_type ch = tmp28;
    __auto_type xy = emap.data[ch];
    int tmp29_data[1];
    list_int tmp29 = {1, tmp29_data};
    tmp29.data[0] = xy.data[0];
    list_int tmp30 = concat_list_int(coords, tmp29);
    coords = tmp30;
    int tmp31_data[1];
    list_int tmp31 = {1, tmp31_data};
    tmp31.data[0] = xy.data[1];
    list_int tmp32 = concat_list_int(coords, tmp31);
    coords = tmp32;
    i = i + 1;
  }
  __auto_type half = ((double)coords.len) / ((double)2);
  list_int k1 = list_int_create(0);
  list_int k2 = list_int_create(0);
  __auto_type idx = 0;
  while (idx < half) {
    int tmp33_data[1];
    list_int tmp33 = {1, tmp33_data};
    tmp33.data[0] = coords.data[idx];
    list_int tmp34 = concat_list_int(k1, tmp33);
    k1 = tmp34;
    idx = idx + 1;
  }
  while (idx < coords.len) {
    int tmp35_data[1];
    list_int tmp35 = {1, tmp35_data};
    tmp35.data[0] = coords.data[idx];
    list_int tmp36 = concat_list_int(k2, tmp35);
    k2 = tmp36;
    idx = idx + 1;
  }
  __auto_type res = "";
  __auto_type j = 0;
  while (j < half) {
    char *tmp37 = _str(k1.data[j]);
    char *tmp38 = concat_string(tmp37, ",");
    char *tmp39 = _str(k2.data[j]);
    char *tmp40 = concat_string(tmp38, tmp39);
    __auto_type key = tmp40;
    char *tmp41 = concat_string(res, dmap.data[key]);
    res = tmp41;
    j = j + 1;
  }
  return res;
}

int mochi_main() {
  list_string tmp42 = list_string_create(5);
  tmp42.data[0] = "A";
  tmp42.data[1] = "B";
  tmp42.data[2] = "C";
  tmp42.data[3] = "D";
  tmp42.data[4] = "E";
  list_string tmp43 = list_string_create(5);
  tmp43.data[0] = "F";
  tmp43.data[1] = "G";
  tmp43.data[2] = "H";
  tmp43.data[3] = "I";
  tmp43.data[4] = "K";
  list_string tmp44 = list_string_create(5);
  tmp44.data[0] = "L";
  tmp44.data[1] = "M";
  tmp44.data[2] = "N";
  tmp44.data[3] = "O";
  tmp44.data[4] = "P";
  list_string tmp45 = list_string_create(5);
  tmp45.data[0] = "Q";
  tmp45.data[1] = "R";
  tmp45.data[2] = "S";
  tmp45.data[3] = "T";
  tmp45.data[4] = "U";
  list_string tmp46 = list_string_create(5);
  tmp46.data[0] = "V";
  tmp46.data[1] = "W";
  tmp46.data[2] = "X";
  tmp46.data[3] = "Y";
  tmp46.data[4] = "Z";
  list_string tmp47 = list_string_create(5);
  tmp47.data[0] = "J";
  tmp47.data[1] = "1";
  tmp47.data[2] = "2";
  tmp47.data[3] = "3";
  tmp47.data[4] = "4";
  list_int squareRosetta_data[] = {tmp42, tmp43, tmp44, tmp45, tmp46, tmp47};
  list_list_int squareRosetta = {6, squareRosetta_data};
  list_string tmp48 = list_string_create(5);
  tmp48.data[0] = "B";
  tmp48.data[1] = "G";
  tmp48.data[2] = "W";
  tmp48.data[3] = "K";
  tmp48.data[4] = "Z";
  list_string tmp49 = list_string_create(5);
  tmp49.data[0] = "Q";
  tmp49.data[1] = "P";
  tmp49.data[2] = "N";
  tmp49.data[3] = "D";
  tmp49.data[4] = "S";
  list_string tmp50 = list_string_create(5);
  tmp50.data[0] = "I";
  tmp50.data[1] = "O";
  tmp50.data[2] = "A";
  tmp50.data[3] = "X";
  tmp50.data[4] = "E";
  list_string tmp51 = list_string_create(5);
  tmp51.data[0] = "F";
  tmp51.data[1] = "C";
  tmp51.data[2] = "L";
  tmp51.data[3] = "U";
  tmp51.data[4] = "M";
  list_string tmp52 = list_string_create(5);
  tmp52.data[0] = "T";
  tmp52.data[1] = "H";
  tmp52.data[2] = "Y";
  tmp52.data[3] = "V";
  tmp52.data[4] = "R";
  list_string tmp53 = list_string_create(5);
  tmp53.data[0] = "J";
  tmp53.data[1] = "1";
  tmp53.data[2] = "2";
  tmp53.data[3] = "3";
  tmp53.data[4] = "4";
  list_int squareWikipedia_data[] = {tmp48, tmp49, tmp50, tmp51, tmp52, tmp53};
  list_list_int squareWikipedia = {6, squareWikipedia_data};
  __auto_type textRosetta = "0ATTACKATDAWN";
  __auto_type textWikipedia = "FLEEATONCE";
  __auto_type textTest = "The invasion will start on the first of January";
  __auto_type maps = square_to_maps(squareRosetta);
  __auto_type emap = maps.data["e"];
  __auto_type dmap = maps.data["d"];
  printf("from Rosettacode\n");
  char *tmp54 = concat_string("original:\t ", textRosetta);
  printf("%s\n", tmp54);
  __auto_type s = encrypt(textRosetta, emap, dmap);
  char *tmp55 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp55);
  s = decrypt(s, emap, dmap);
  char *tmp56 = concat_string("and back:\t ", s);
  printf("%s\n", tmp56);
  maps = square_to_maps(squareWikipedia);
  emap = maps.data["e"];
  dmap = maps.data["d"];
  printf("from Wikipedia\n");
  char *tmp57 = concat_string("original:\t ", textWikipedia);
  printf("%s\n", tmp57);
  s = encrypt(textWikipedia, emap, dmap);
  char *tmp58 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp58);
  s = decrypt(s, emap, dmap);
  char *tmp59 = concat_string("and back:\t ", s);
  printf("%s\n", tmp59);
  maps = square_to_maps(squareWikipedia);
  emap = maps.data["e"];
  dmap = maps.data["d"];
  printf("from Rosettacode long part\n");
  char *tmp60 = concat_string("original:\t ", textTest);
  printf("%s\n", tmp60);
  s = encrypt(textTest, emap, dmap);
  char *tmp61 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp61);
  s = decrypt(s, emap, dmap);
  char *tmp62 = concat_string("and back:\t ", s);
  printf("%s\n", tmp62);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
